Added fontawesome icons. Fixed layout to search bar when window is to small.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Hotel Search</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="./style.css">
+    <link href="./all.css" rel="stylesheet"> <!--load all styles -->
+    <link rel="stylesheet" type="text/css" href="./style.css">    
 </head>
 <body>
     <div id="ajaxSuccess">
@@ -90,10 +91,10 @@
                         </button>
                     </div>
                 </div>
-                <select>
-                    <option value="Single Room">Single Room</option>
-                    <option value="Double Room">Double Room</option>
-                    <option value="Family Rooms">Family Rooms</option>
+                <select class="fa">
+                    <option class="fa" value="Single Room">&#xf007 Single Room</option>
+                    <option class="fa" value="Double Room">&#xf500 Double Room</option>
+                    <option class="fa" value="Family Rooms">&#xf0c0 Family Rooms</option>
                 </select>
             </div>
             <div id="filters">
