Fix width to iframe

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
-                <iframe width="700px" height="400px" src=""></iframe>
+                <iframe width="95%" height="400px" src=""></iframe>
             </div>
           </div>
         </div>
